Ensure long collection names in results are truncated properly w ellipses

--- a/ui/src/app/tables.scss
+++ b/ui/src/app/tables.scss
@@ -12,10 +12,6 @@ table {
     text-overflow: ellipsis;
     overflow: hidden;
 
-    span {
-      display: inline-flex !important;
-    }
-
     &.expand {
       width: 2em;
       max-width: 2em;
@@ -26,6 +22,10 @@ table {
         @include rtlSupportInvertedProp(margin, left, 0, null);
       }
     }
+  }
+
+  tr.skeleton > td {
+    text-overflow: clip;
   }
 
   // Make these columns take the minimal width that fits the content
@@ -91,6 +91,14 @@ table {
     max-width: unset;
     white-space: normal !important;
     word-break: break-word;
+
+    span {
+      display: inline-flex !important;
+    }
+
+    .bp3-skeleton {
+      white-space: nowrap;
+    }
 
     .EntityLabel, .EntityLink {
       display: flex !important;
